@@ -8,10 +8,10 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,10 +23,12 @@ public class RoleServiceImpl implements RoleService {
     RoleMapper roleMapper;
 
     @Override
+    @Cacheable(value = "roles", key = "'all'")
     public List<RoleResponse> getAllRoles() {
+        log.info("Fetching all roles");
         return roleRepository.findAll().stream()
                 .map(roleMapper::toRoleResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
